[package]
name = "raytracing"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.56"
wasm-bindgen = "0.2.79"
nalgebra = "0.30.1"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3.56"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'console',
  'CanvasRenderingContext2d'
]
